# snap-templates

./: snap-templates.cabal
project_template/barebones/: foo.cabal
project_template/default/: foo.cabal
project_template/simple-poll-1/: foo.cabal
project_template/simple-poll-1/src/: Application.hs  Site.hs
project_template/simple-poll-2/: foo.cabal
project_template/simple-poll-2/snaplets/heist/templates/: base.tpl  poll.tpl  results.tpl
project_template/simple-poll-2/src/: Application.hs  Site.hs
project_template/tutorial/: foo.cabal
src/Snap/: Starter.hs  StarterTH.hs
