Name:                projname
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Extra-source-files:  snaplets/heist/templates/*.tpl, .ghci, log/placeholder

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable projname
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Application, Site

  Build-depends:
    base                      >= 4     && < 5,
    text                      >= 0.11  && < 1.3,
    transformers              >= 0.3   && < 0.5,
    bytestring                >= 0.10  && < 0.11,
    containers                >= 0.5   && < 0.6,
    map-syntax                >= 0.2   && < 0.3,
    mtl                       >= 2     && < 3,
    lens                      >= 3.7.6 && < 4.5,
    snap                      >= 1.0   && < 1.1,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.1,
    snap-loader-static        >= 1.0   && < 1.1,
    heist                     >= 1.0   && < 1.1,
    xmlhtml                   >= 0.2.3 && < 0.3

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
